# MidiParser

./: .gitignore  CMakeLists.txt  README.md  base_def.h  bit_util.c  bit_util.h  common_util.c  common_util.h  log.c  log.h  midi_common.c  midi_common.h  midi_reader.c  midi_reader.h  midi_struct.h  midi_writer.c  midi_writer.h  print_util.c  print_util.h
